--- a/weather/templates/registration/verify.html
+++ b/weather/templates/registration/verify.html
@@ -17,16 +17,27 @@
             We've sent a verification email to your provided email address. Please check your inbox and click the link to verify your email.
         </p>
         <div class="flex justify-center space-x-4">
-            <button id="verifyPhoneButton" class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">
+
+            <!--Form to request SMS verification code
+            <form method="POST" id="getSMS" action="{% url 'verification-form' %}" class="hidden">
+                {% csrf_token %}
+                <input type="phone" id="phone-field" value="{{ user.phone }}">
+            </form>-->
+
+            <a href="{% url 'await-verification' %}"> <button id="verifyPhoneButton" class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">
                 Verify Phone Instead
-            </button>
+            </button></a>
+
+            <!--Form to request email verification resend-->
             <form method="POST" id="email-resend" action="{% url 'resend-email' %}" class="hidden">
             {% csrf_token %}
                 <input type="email" id="email-field" value="{{ user.email }}">
             </form>
+
             <button type="submit" id="resendEmailButton" class="px-4 py-2 bg-green-400 text-gray-700 rounded hover:bg-green-600">
                 Resend Email
             </button>
+
         </div>
         <p class="text-center text-gray-600 text-sm">
             If you didn't receive the email, check your spam folder or click the resend button above.
