--- a/weather/templates/registration/login.html
+++ b/weather/templates/registration/login.html
@@ -6,6 +6,7 @@
     <title>Login</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <script type="text/javascript" src="{% static 'js/guestLogin.js' %}"></script>
 </head>
 <body class="bg-gradient-to-r from-blue-500 to-sky-500 min-h-screen flex items-center justify-center text-gray-700">
     <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
@@ -28,14 +29,28 @@
             </div>
             <button type="submit" class="w-full bg-gradient-to-r from-blue-500 to-sky-500 text-white font-bold py-2 px-4 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-opacity-50 hover:from-blue-600 hover:to-sky-600">Login</button>
         </form>
-        <section class="flex justify-between mt-6">
-            <a href="#" class="block text-center text-blue-500 hover:underline" target="_blank" title="Forgot Password?">Forgot Password?</a>
-            <a href="{% url 'get_onboard' %}">
-                <button class="bg-gradient-to-r from-blue-700 to-indigo-600 p-2 text-white font-semibold hover:from-blue-500 hover:to-indigo-500 hover:text-gray-100 transition-all duration-300 rounded-md shadow-md">
-                Signup
-                </button>
+
+        <section class="flex justify-between items-center mt-6">
+            <a href="#" class="text-blue-500 hover:underline" target="_blank" title="Forgot Password?">
+                Forgot Password?
             </a>
+            <div class="block md:flex md:space-x-4">
+                <a id="guestLoginBtn">
+                {% csrf_token %}
+                    <button class="bg-gray-500 text-white px-4 py-2 font-semibold rounded-md shadow-md transition-all duration-300
+                    hover:bg-gray-600 hover:text-gray-200">
+                        Login as Guest
+                    </button>
+                </a>
+                <a href="{% url 'get_onboard' %}">
+                    <button class="mt-2 md:mt-auto bg-gradient-to-r from-blue-700 to-indigo-600 px-4 py-2 text-white font-semibold rounded-md shadow-md
+                    hover:from-blue-500 hover:to-indigo-500 hover:text-gray-100 transition-all duration-300">
+                        Signup
+                    </button>
+                </a>
+            </div>
         </section>
+
 
         <!-- General Errors (non-field-specific) -->
         {% if form.non_field_errors %}
